// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Dialog can focus element inside dialog 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX fMdaFI"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-EHOje eQYihx"
      role="button"
    >
      <button
        class="sc-gzVnrw cJPjDm"
        data-testid="kenobi-button"
      >
        <span
          class="sc-htoDjs gPLHrW"
        >
          Open
        </span>
      </button>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="sc-bdVaJa ftkuoC"
        data-testid="kenobi-inline-dialog"
        id="kenobi-inline-dialog-4"
        role="dialog"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <input
          class="sc-dnqmqq cLaWQh"
          data-autofocus="true"
          data-testid="kenobi-input"
        />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Inline Dialog should be in document on manual show 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX fMdaFI"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-EHOje eQYihx"
      role="button"
    >
      <button
        class="sc-gzVnrw cJPjDm"
        data-testid="kenobi-button"
      >
        <span
          class="sc-htoDjs gPLHrW"
        >
          Open
        </span>
      </button>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="sc-bdVaJa ftkuoC"
        data-testid="kenobi-inline-dialog"
        id="kenobi-inline-dialog-3"
        role="dialog"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <p
          class="sc-htpNat duswoF"
          color="default"
          size="400"
        >
          sup
        </p>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Inline Dialog should be in document when open 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX fMdaFI"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-EHOje eQYihx"
      role="button"
    >
      <button
        class="sc-gzVnrw cJPjDm"
        data-testid="kenobi-button"
      >
        <span
          class="sc-htoDjs gPLHrW"
        >
          Open
        </span>
      </button>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="sc-bdVaJa ftkuoC"
        data-testid="kenobi-inline-dialog"
        id="kenobi-inline-dialog-2"
        role="dialog"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <p
          class="sc-htpNat duswoF"
          color="default"
          size="400"
        >
          Test
        </p>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Inline Dialog should not be in document when closed 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX fMdaFI"
  >
    <div
      aria-haspopup="true"
      class="sc-EHOje eQYihx"
      role="button"
    >
      <div>
        Open
      </div>
    </div>
  </div>
</DocumentFragment>
`;
